--- a/Xslt/zone/Settings.config
+++ b/Xslt/zone/Settings.config
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <settings>
-
     <!--value bắt buộc phải là giá trị binary. Ví dụ: 1; 2; 4; 8; 16;...-->
     <position>
-      <add name="Menu Left" value="1" resourcefile="" />
-      <add name="Menu Right" value="2" resourcefile="" />
-      <add name="Home sản phẩm" value="4" resourcefile="" />
-      <add name="Home quan hệ cổ đông" value="8" resourcefile="" />
-      <add name="Home về NETCO" value="16" resourcefile="" />
-      
+        <add name="Menu Left" value="1" resourcefile="" />
+        <add name="Menu Right" value="2" resourcefile="" />
+        <add name="Home sản phẩm" value="4" resourcefile="" />
+        <add name="Home quan hệ cổ đông" value="8" resourcefile="" />
+        <add name="Home về NETCO" value="16" resourcefile="" />
+        <add name="News menu" value="32" resourcefile="" />
     </position>
-
 </settings>
