--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -8,6 +8,7 @@
   <templatelist xsltname="News-Group.xslt" name="Danh sách tin tức group"></templatelist>
   <templatelist xsltname="Video.xslt" name="Danh sách video clip"></templatelist>
   <templatelist xsltname="Images.xslt" name="Danh sách hình ảnh"></templatelist>
+  <templatelist xsltname="CoDongList.xslt" name="Danh sách cổ đông"></templatelist>
 
   <templatedetail xsltname="CareersDetail.xslt" name="Chi tiết tuyển dụng"></templatedetail>
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin tức"></templatedetail>
