--- a/Xslt/zone/Settings.config
+++ b/Xslt/zone/Settings.config
@@ -8,5 +8,7 @@
         <add name="Home quan hệ cổ đông" value="8" resourcefile="" />
         <add name="Home về NETCO" value="16" resourcefile="" />
         <add name="News menu" value="32" resourcefile="" />
+        <add name="Cổ đông" value="64" resourcefile="" />
+        <add name="Danh mục nhãn hiệu kinh doanh" value="128" resourcefile="" />
     </position>
 </settings>
